i think i fixed teh scrollbar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,26 +1,1 @@
-.config-content {
-  margin-left: 12rem;
-  height: 100vh;
-}
 
-.config-sidebar {
-  width: 12rem;
-}
-
-.case-size-label {
-  width: 9.5rem;
-}
-
-.content-scrollbar {
-  --scrollbar-border-radius: 7px;
-  --scrollbar-padding: 4px;
-  --scrollbar-viewport-margin: 0;
-  --scrollbar-track-color: transparent;
-  --scrollbar-wrapper-color: transparent;
-  --scrollbar-thumb-color: rgba(0, 0, 0, 0.2);
-  --scrollbar-thumb-hover-color: var(--scrollbar-thumb-color);
-  --scrollbar-size: 5px;
-  --scrollbar-hover-size: var(--scrollbar-size);
-  --scrollbar-thumb-transition: height ease-out 150ms, width ease-out 150ms;
-  --scrollbar-track-transition: height ease-out 150ms, width ease-out 150ms;
-}
